maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: not found: value random3
    choix = random3()
            ^